<resources>
    <string name="app_name" translatable="false">Tracker</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Tracker</string>
    <string name="nav_header_subtitle" translatable="false">mdmehedi23@student.sust.edu</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_aboutus" translatable="false">About Us</string>

    <string name="menu_home" translatable="false">University transit center</string>
    <string name="menu_gallery" translatable="false">Map Gallery</string>
    <string name="menu_bus_schedule" translatable="false">Bus Schedule</string>
    <string name="menu_tools" translatable="false">Track</string>
    <string name="menu_share" translatable="false">Share location</string>
    <string name="menu_remove" translatable="false">Clear route</string>

    <string name="access_token" translatable="false"> sk.eyJ1IjoibWVoZWRpcnVtaSIsImEiOiJjazVoZHM1ZXkwMmo0M2xudmIzZjNxNG85In0.Z4M4-gPDTIIxr9MB7BPHoQ</string>
    <string name="user_location_permission_explanation">This application need access your gps</string>
    <string name="new_location">new location</string>
    <string name="Map_mode">TRAFFIC_NIGHT</string>
    <string name="navigation_style" translatable="false">mapbox://styles/mapbox/navigation-guidance-day-v4</string>


    <string-array name="location">
        <item> location</item>
        <item> location</item>
        <item> location</item>
        <item> location</item>
        <item> location</item>
        <item> location</item>
        <item> location</item>
        <item> location</item>
        <item> location</item>
        <item> location</item>
    </string-array>

    <string-array name="Departure">
        <item> 12.10 pm </item>
        <item> 1.10 pm </item>
        <item> 4.10 pm </item>
        <item> 8.30 pm </item>
        <item> 7.30 pm </item>
        <item> 9.10 pm </item>
        <item> 10.10 pm </item>
        <item> 11.10 pm </item>
        <item> 8.10 pm </item>
        <item> 8.10 pm </item>
    </string-array>
</resources>
