<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_buses"
            android:icon="@drawable/bus_schedule"
            android:title="@string/menu_bus_schedule" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_directions_walk_black_24dp"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/route_remove"
                android:icon="@drawable/ic_remove_circle_outline_black_24dp"
                android:title="@string/menu_remove" />
        </menu>
    </item>

</menu>
